--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 torchfold
 psqlparse==1.0rc7
 psycopg2-binary
-torch
-torchvision
-torchaudio
+torch==1.0.0
+numpy==1.19.5
+git+https://github.com/mhoangvslev/torchfold.git@master
