--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ RTOS_SCHEMA_FILE="schema.sql"
 RTOS_DB_PASSWORD="123456"
 RTOS_DB_USER="postgres"
 RTOS_DB_NAME="imdbload"
-RTOS_DB_HOST="192.168.32.2"
+RTOS_DB_HOST="postgresql://${RTOS_DB_USER}:${RTOS_DB_PASSWORD}@postgres/${RTOS_DB_NAME}"
 RTOS_DB_PORT="5432"
