--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 torchfold
 psqlparse==1.0rc7
 psycopg2-binary
-torch==1.0.0
-numpy==1.19.5
+torch
 git+https://github.com/mhoangvslev/torchfold.git@master
