--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-RTOS_JOB_DIR="JOB-queries"
+RTOS_JOB_DIR="JOB-queries/sparql-debug"
 RTOS_SCHEMA_FILE="schema.sql"
 RTOS_DB_PASSWORD="123456"
 RTOS_DB_USER="postgres"
@@ -10,3 +10,4 @@ RTOS_ISQL_ENDPOINT="sparql"
 RTOS_ISQL_GRAPH="http://example.com/DAV/void"
 RTOS_ISQL_HOST="localhost"
 RTOS_ISQL_PORT="8890"
+RTOS_ENGINE="sparql"
