--- a/configs/sparql_sage.yml
+++ b/configs/sparql_sage.yml
@@ -42,9 +42,9 @@ cost-training:
     name: "cost-training-50k"
     n_episodes: 50000
     data: sparql
-    save_every: 10
+    save_every: 1
     update_target_every: 3
-    rewarder: "cost-improvement"
+    rewarder: "refined-cost-improvement"
     device: cpu
     checkpoint: "checkpoint-50k.yml"
 
