--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,11 @@ services:
     container_name: sage-engine
     image: "minhhoangdang/sage-engine:py394-rlxp"
     ports:
-      - '8080:8080'
+      - '8081:8081'
     volumes:
       - ${SAGE_GRAPH}:/root/sage-engine/graphs
       - ${SAGE_CONFIG}:/root/sage-engine/config/sage.yaml
-    entrypoint: 'conda run --no-capture-output -n xp /bin/bash -c "poetry run sage config/sage.yaml --workers=1 --port=8080"'
+    entrypoint: 'conda run --no-capture-output -n xp /bin/bash -c "poetry run sage config/sage.yaml --workers=1 --port=8081"'
     #entrypoint: 'conda run --no-capture-output -n xp /bin/bash -c "sh launch.sh sage"'
     
   rtos:
@@ -49,8 +49,8 @@ services:
       - postgres
     container_name: "rtos"
     build:
-      context: ./
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: docker/rtos.Dockerfile
       network: "host"
       args:
         HTTP_PROXY:
@@ -70,6 +70,20 @@ services:
       - ./log:/workplace/log 
       - /tmp:/tmp
     networks: [ postgresNetwork ]
+
+  jupyter-notebook:
+    container_name: rtos-jupyter
+    network_mode: "host"
+    build: 
+      dockerfile: docker/jupyter.Dockerfile
+      context: .
+    devices:
+      - /dev/nvidia0:/dev/nvidia0
+      - /dev/nvidiactl:/dev/nvidiactl
+      - /dev/nvidia-modeset:/dev/nvidia-modeset
+      - /dev/nvidia-uvm:/dev/nvidia-uvm
+      - /dev/nvidia-uvm-tools:/dev/nvidia-uvm-tools
+    entrypoint: 'jupyter notebook --allow-root --NotebookApp.allow_origin=https://colab.research.google.com --port=8080 --NotebookApp.port_retries=0'
 
 networks:
   postgresNetwork:
